--- a/PriChain/views/dashboard.html
+++ b/PriChain/views/dashboard.html
@@ -20,7 +20,7 @@
 
   <div class="container-fluid hide main-page">
 
-  <div class="progress hide">
+  <div class="progress hide" style="z-index: 2; position: fixed;">
       <div class="indeterminate"></div>
   </div>
         
@@ -51,25 +51,33 @@
   <div class="row create-contract-tab hide">
     <div class="row">
       <div class="col s4">
-        <p id="blockchain_address">lgkdngknfd</p>
-        <p id="blockchain_privatekey">gdf</p>
+        <p id="blockchain_address"></p>
+        <p id="blockchain_privatekey"></p>
       </div>
     </div>
 
     <div class="row">
         <div class="col s4"></div>
         <div class="col s4">
-          <h4>Contract</h4></br>
+          <form method="post" action="/uploader/upload" enctype="multipart/form-data" id="publication-form">
+          <!-- <h4>Contract</h4></br> -->
           <div class="row">
-            <div class="input-field col s12">
-              <input  id="contract-file" type="file" class="validate">
+            <div class="col s8">
+              <div class="file-field input-field">
+                <div class="btn">
+                  <span>File</span>
+                  <input id="publication-file" name="publication-file" type="file" class="validate file-upload">
+                </div>
+                <div class="file-path-wrapper">
+                  <input class="file-path validate"  type="text">
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="row">
             <div class="input-field col s4">
-              <button id="submit-file" class="btn right">Upload File</button>
-            </div>
+                <button id="submit-file" class="btn right file-upload">Upload File</button>
+              </div>
           </div>
+          </form>
         </div>
         
         <div class="col s4">
