--- a/PriChain/views/partials/head.ejs
+++ b/PriChain/views/partials/head.ejs
@@ -8,6 +8,7 @@
 <!-- <link rel="stylesheet" href="css/main.css"> -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/jquery.form.js"></script>
 <link rel="stylesheet" href="css/materialize.min.css">
 <!-- <script src="js/globals.js"></script> -->
 <script src="js/materialize.min.js"></script>
