book contract created, UI improved

--- a/PriChain/views/dashboard.html
+++ b/PriChain/views/dashboard.html
@@ -21,7 +21,7 @@
     <li><a class=""><i class="material-icons">account_circle</i>Profile</a></li>
     <li><a class="" href="/logout"><i class="material-icons">close</i>Logout</a></li>
   </ul>
-  <div class="container">
+  <div class="container1">
      <!-- ===============Loader==================== -->
     <div class="row">
       <div class="col s12 m12">
@@ -44,8 +44,8 @@
       <!-- =====================MainPage================ -->
 
     <div class="row">
-      <div class="col s2 m2"></div>
-      <div class="col s10 m10">
+      <div class="col s3 m3"></div>
+      <div class="col s9 m9">
           <div class="row load-data-tab "></div>
       </div>
     </div>
