--- a/PriChain/views/signin.html
+++ b/PriChain/views/signin.html
@@ -7,19 +7,11 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col s4"></div>
-      <div class="col s4">
+      <div class="col s3"></div>
+      <div class="col s6"><br><br><br>
+          <div class="card-panel">
         <h4>SignIn </h4></br>
-        <!-- <div class="row">
-          <div class="input-field col s12">
-            <select id="user-type" name="user-type" >
-              <option>Author</option>
-              <option>Publisher</option>
-              <option>User</option>
-            </select>
-            <label class="active" for="user-type">Account Type</label>
-          </div>
-        </div> -->
+      
         <div class="row">
           <div class="input-field col s12">
             <input  id="user-email" type="text" class="validate">
@@ -33,16 +25,17 @@
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s8">
+          <div class="input-field col s10">
             <button id="submit-signup" class="btn right">SignUp</button>
           </div>
-          <div class="input-field col s4">
+          <div class="input-field col s2">
             <button id="submit-signin" class="btn right">SignIn</button>
           </div>
         </div>
+        </div>
       </div>
       
-      <div class="col s4"></div>
+      <div class="col s3"></div>
      
 
     </div>
