--- a/PriChain/views/signup.html
+++ b/PriChain/views/signup.html
@@ -7,8 +7,9 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col s4"></div>
-      <div class="col s4">
+      <div class="col s3"></div>
+      <div class="col s6">
+          <div class="card-panel">
         <h4>SignIn </h4></br>
         <div class="row">
           <div class="input-field col s12">
@@ -41,16 +42,17 @@
         
                 
         <div class="row">
-          <div class="input-field col s8">
+          <div class="input-field col s10">
             <button id="submit-signin" class="btn right">SignIn</button>
           </div>
-          <div class="input-field col s4">
+          <div class="input-field col s2">
             <button id="submit-signup" class="btn right">SignUp</button>
           </div>
         </div>
+        </div>
       </div>
       
-      <div class="col s4"></div>
+      <div class="col s3"></div>
      
 
     </div>
