author and publisher contract added

--- a/PriChain/views/partials/head_dashboard.ejs
+++ b/PriChain/views/partials/head_dashboard.ejs
@@ -7,9 +7,9 @@
 <meta name="author" content="narendra11510145@gmail.com">
 <!-- <link rel="stylesheet" href="css/main.css"> -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<script src="/js/jquery-3.3.1.min.js"></script>
-<script src="/js/jquery.form.js"></script>
-<link rel="stylesheet" href="/css/materialize.min.css">
+<script src="../js/jquery-3.3.1.min.js"></script>
+<script src="../js/jquery.form.js"></script>
+<link rel="stylesheet" href="../css/materialize.min.css">
 <!-- <script src="js/globals.js"></script> -->
-<script src="/js/materialize.min.js"></script>
+<script src="../js/materialize.min.js"></script>
          
