--- a/PriChain/views/signin.html
+++ b/PriChain/views/signin.html
@@ -11,7 +11,7 @@
       <div class="col s6"><br><br><br>
           <div class="card-panel">
         <h4>SignIn </h4></br>
-      
+        
         <div class="row">
           <div class="input-field col s12">
             <input  id="user-email" type="text" class="validate">
@@ -32,6 +32,7 @@
             <button id="submit-signin" class="btn right">SignIn</button>
           </div>
         </div>
+        <div class="msg"></div>
         </div>
       </div>
       
