--- a/PriChain/views/signup.html
+++ b/PriChain/views/signup.html
@@ -49,6 +49,7 @@
             <button id="submit-signup" class="btn right">SignUp</button>
           </div>
         </div>
+        <div class="msg"></div>
         </div>
       </div>
       
