--- a/PriChain/views/dashboard_publisher.html
+++ b/PriChain/views/dashboard_publisher.html
@@ -13,10 +13,10 @@
       <a href="#name"><span class="white-text name">John Doe</span></a>
       <a href="#email"><span class="white-text email">demoemail@gmail.com</span></a>
     </div></li>
-    <li><a  id="create-contract-link"><i class="material-icons">add_circle_outline</i>Create New Contract</a></li>
-    <li><a id="all-contract-link"> <i class="material-icons">chrome_reader_mode</i>All Contract</a></li>
+    <li><a id="all-contract-link"> <i class="material-icons">chrome_reader_mode</i>All Publications</a></li>
+    <!-- <li><a  id="create-contract-link"><i class="material-icons">add_circle_outline</i>Upload Book For Publishing</a></li> -->
     <li><div class="divider"></div></li>
-    <li><a class=""><i class="material-icons">exit_to_app</i>Distributer`s Requests</a></li>
+    <li><a class=""><i class="material-icons">exit_to_app</i>My Requests for Publish</a></li>
     <li><div class="divider"></div></li>
     <li><a class=""><i class="material-icons">account_circle</i>Profile</a></li>
     <li><a class="" href="/logout"><i class="material-icons">close</i>Logout</a></li>
@@ -53,6 +53,6 @@
 
   </div>
  
-  <script src="js/dashboard.js"></script>
+  <script src="../js/dashboard_publisher.js"></script>
     </body>
 </html>
