--- a/PriChain/views/error.html
+++ b/PriChain/views/error.html
@@ -1,3 +1,21 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <% include ./partials/head %>
+    </head>
+<body>
+    <div class=" row">
+        <div class="col-4"></div>
+        <div class="col-4">
+        <h1 class="center"><%= message %></h1>
+        <h2 class="center"><%= error.status %></h2>
+        <pre    ><%= error.stack %></pre> 
+        <pre    ><%= error.desc %></pre> 
+        </div>
+        <div class="col-4"></div> 
+    </div>
+</body>
+</html>
+
+
