publisher dashboard and request for publication created

--- a/PriChain/views/dashboard_publisher.html
+++ b/PriChain/views/dashboard_publisher.html
@@ -16,7 +16,7 @@
     <li><a id="all-contract-link"> <i class="material-icons">chrome_reader_mode</i>All Publications</a></li>
     <!-- <li><a  id="create-contract-link"><i class="material-icons">add_circle_outline</i>Upload Book For Publishing</a></li> -->
     <li><div class="divider"></div></li>
-    <li><a class=""><i class="material-icons">exit_to_app</i>My Requests for Publish</a></li>
+    <li><a class=""><i class="material-icons">exit_to_app</i>My Requests &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   <span class="request-numbers circle gray"></span></a></li>
     <li><div class="divider"></div></li>
     <li><a class=""><i class="material-icons">account_circle</i>Profile</a></li>
     <li><a class="" href="/logout"><i class="material-icons">close</i>Logout</a></li>
