--- a/PriChain/views/partials/head.ejs
+++ b/PriChain/views/partials/head.ejs
@@ -5,7 +5,7 @@
         content="width=device-width, height=device-height,  initial-scale=1.0, user-scalable=no,user-scalable=0"/>
 <meta name="robots" content="index, follow" />
 <meta name="author" content="narendra11510145@gmail.com">
-<!-- <link rel="stylesheet" href="css/main.css"> -->
+<link rel="stylesheet" href="css/main.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script src="/js/jquery-3.3.1.min.js"></script>
 <script src="/js/jquery.form.js"></script>
