--- a/PriChain/views/dashboard_author.html
+++ b/PriChain/views/dashboard_author.html
@@ -16,7 +16,7 @@
     <li><a id="all-contract-link"> <i class="material-icons">chrome_reader_mode</i>All Books By Me</a></li>
     <li><a  id="create-contract-link"><i class="material-icons">add_circle_outline</i>Upload Book For Publishing</a></li>
     <li><div class="divider"></div></li>
-    <li><a class=""><i class="material-icons">exit_to_app</i>Distributer`s Requests&nbsp;&nbsp;   <span class="request-numbers circle gray"></span></a></li>
+    <li><a id="requests-for-me" class=""><i class="material-icons">exit_to_app</i>Distributer`s Requests&nbsp;&nbsp;   <span class="request-numbers circle gray"></span></a></li>
     <li><div class="divider"></div></li>
     <li><a class=""><i class="material-icons">account_circle</i>Profile</a></li>
     <li><a class="" href="/logout"><i class="material-icons">close</i>Logout</a></li>
