--- a/PriChain/views/dashboard_author.html
+++ b/PriChain/views/dashboard_author.html
@@ -7,9 +7,9 @@
   <ul id="slide-out" class=" sidenav sidenav-fixed">
     <li><div class="user-view">
       <div class="background">
-        <img src="images/wall.jpg">
+        <img  src="images/wall.jpg">
       </div>
-      <a href="#user"><img class="circle" src="images/avatar_m.jpeg"></a>
+      <a href="#user"><img class=" avatar circle" src="images/avatar_m.jpeg"></a>
       <a href="#name"><span class="white-text name">John Doe</span></a>
       <a href="#email"><span class="white-text email">demoemail@gmail.com</span></a>
     </div></li>
@@ -17,8 +17,9 @@
     <li><a  id="create-contract-link"><i class="material-icons">add_circle_outline</i>Upload Book For Publishing</a></li>
     <li><div class="divider"></div></li>
     <li><a id="requests-for-me" class=""><i class="material-icons">exit_to_app</i>Distributer`s Requests&nbsp;&nbsp;   <span class="request-numbers circle gray"></span></a></li>
+    <li><a id="requests-for-me-approved" class=""><i class="material-icons">exit_to_app</i>Approved Requests</a></li>
     <li><div class="divider"></div></li>
-    <li><a class=""><i class="material-icons">account_circle</i>Profile</a></li>
+    <li><a class="" id="profile-tab"><i class="material-icons">account_circle</i>Profile</a></li>
     <li><a class="" href="/logout"><i class="material-icons">close</i>Logout</a></li>
   </ul>
   <div class="container1">
@@ -49,6 +50,8 @@
           <div class="row load-data-tab "></div>
       </div>
     </div>
+
+
 
 
   </div>
