--- a/PriChain/views/partials/head.ejs
+++ b/PriChain/views/partials/head.ejs
@@ -1,4 +1,4 @@
-<title>Node Starter App with MySQL</title>
+<title>Publish Auth</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" 
