--- a/PriChain/views/dashboard_user.html
+++ b/PriChain/views/dashboard_user.html
@@ -14,12 +14,10 @@
       <a href="#email"><span class="white-text email">demoemail@gmail.com</span></a>
     </div></li>
     <li><a id="all-contract-link"> <i class="material-icons">chrome_reader_mode</i>All Publications</a></li>
-    <!-- <li><a  id="create-contract-link"><i class="material-icons">add_circle_outline</i>Upload Book For Publishing</a></li> -->
     <li><div class="divider"></div></li>
-    <li><a class="" id="requests-by-me"><i class="material-icons">exit_to_app</i>My Requests &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   <span class="request-numbers circle gray"></span></a></li>
-    <li><a id="requests-by-me-approved" class=""><i class="material-icons">exit_to_app</i>Approved Requests</a></li>
+    <li><a id="check-auth-link" class=""><i class="material-icons">exit_to_app</i>Check Authenticity</a></li>
     <li><div class="divider"></div></li>
-    <li><a class="" id="profile-tab"><i class="material-icons">account_circle</i>Profile</a></li>
+    <li><a class="profile-tab" id="profile-tab"><i class="material-icons">account_circle</i>Profile</a></li>
     <li><a class="" href="/logout"><i class="material-icons">close</i>Logout</a></li>
   </ul>
   <div class="container1">
@@ -50,10 +48,7 @@
           <div class="row load-data-tab "></div>
       </div>
     </div>
-
-
   </div>
- 
-  <script src="../js/dashboard_publisher.js"></script>
+  <script src="../js/dashboard_user.js"></script>
     </body>
 </html>
