--- a/PriChain/views/signin.html
+++ b/PriChain/views/signin.html
@@ -7,11 +7,10 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col s3"></div>
-      <div class="col s6"><br><br><br>
-          <div class="card-panel">
+      <div class="col s4"></div>
+      <div class="col s4 "><br><br><br>
+        <div class="card-panel sign-card">
         <h4>SignIn </h4></br>
-        
         <div class="row">
           <div class="input-field col s12">
             <input  id="user-email" type="text" class="validate">
@@ -25,10 +24,10 @@
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s10">
+          <div class="input-field col s8">
             <button id="submit-signup" class="btn right">SignUp</button>
           </div>
-          <div class="input-field col s2">
+          <div class="input-field col s4">
             <button id="submit-signin" class="btn right">SignIn</button>
           </div>
         </div>
