--- a/PriChain/views/signup.html
+++ b/PriChain/views/signup.html
@@ -6,31 +6,33 @@
 <body>
 
   <div class="container-fluid">
-    <div class="row">
-      <div class="col s3"></div>
-      <div class="col s6">
-          <div class="card-panel">
+    <div class="row  ">
+      <div class="col s4"></div>
+      <div class="col s5 "><br><br><br>
+        <div class="card-panel sign-card center-align">
         <h4>SignIn </h4></br>
         <div class="row">
-          <div class="input-field col s12">
-            <select id="user-type" name="user-type" >
-              <option>Author</option>
-              <option>Publisher</option>
-              <option>User</option>
-            </select>
-            <label class="active" for="user-type">Account Type</label>
-          </div>
-        </div>
-        <div class="row">
-            <div class="input-field col s12">
+            <div class="input-field col s6">
                 <input id="user-name" type="text" class="validate">
                 <label class="active" for="user-name">Full Name</label>
             </div>
+            <div class="input-field col s6">
+              <select id="user-type" name="user-type" >
+                <option>Author</option>
+                <option>Publisher</option>
+                <option>User</option>
+              </select>
+              <label class="active" for="user-type">Account Type</label>
+            </div>
         </div>
         <div class="row">
-          <div class="input-field col s12">
+          <div class="input-field col s6">
             <input  id="user-email" type="text" class="validate">
             <label class="active" for="user-email">Email</label>
+          </div>
+          <div class="input-field col s6">
+            <input  id="user-mobile" type="text" class="validate">
+            <label class="active" for="user-mobile">Mobile</label>
           </div>
         </div>
         <div class="row">
@@ -42,10 +44,10 @@
         
                 
         <div class="row">
-          <div class="input-field col s10">
+          <div class="input-field col s8">
             <button id="submit-signin" class="btn right">SignIn</button>
           </div>
-          <div class="input-field col s2">
+          <div class="input-field col s24">
             <button id="submit-signup" class="btn right">SignUp</button>
           </div>
         </div>
@@ -53,7 +55,7 @@
         </div>
       </div>
       
-      <div class="col s3"></div>
+      <!-- <div class="col s3"></div> -->
      
 
     </div>
