--- a/PriChain/views/logout.html
+++ b/PriChain/views/logout.html
@@ -10,10 +10,10 @@
             if(window.localStorage.getItem("auth_token")){
                 window.localStorage.clear();
                 window.location.href = '/'
+            }else {
+                window.location.href = '/'
             }
         })
-
-
     </script>
 
     </body>
