--- a/PriChain/views/dashboard_user.html
+++ b/PriChain/views/dashboard_user.html
@@ -22,22 +22,23 @@
   </ul>
   <div class="container1">
      <!-- ===============Loader==================== -->
-    <div class="row">
-      <div class="col s12 m12">
-        <div class="preloader-wrapper big active loader">
-          <div class="spinner-layer spinner-blue-only">
-            <div class="circle-clipper left">
-              <div class="circle"></div>
-            </div><div class="gap-patch">
-              <div class="circle"></div>
-            </div><div class="circle-clipper right">
-              <div class="circle"></div>
-            </div>
+    <div class="row center-align" style="z-index: 10; position: fixed; left: 60%; top: 40%; background-color: black;">
+      <div class="preloader-wrapper big active loader ">
+        <div class="spinner-layer spinner-blue-only">
+          <div class="circle-clipper left">
+            <div class="circle"></div>
+          </div><div class="gap-patch">
+            <div class="circle"></div>
+          </div><div class="circle-clipper right">
+            <div class="circle"></div>
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="row">
       <div class="progress hide" style="z-index: 2; position: fixed;">
-          <div class="indeterminate"></div>
+        <div class="indeterminate"></div>
       </div>
     </div>
       <!-- =====================MainPage================ -->
