--- a/PriChain/views/signin.html
+++ b/PriChain/views/signin.html
@@ -4,11 +4,10 @@
         <% include ./partials/head %>
     </head>
 <body>
-
   <div class="container-fluid">
     <div class="row">
       <div class="col s4"></div>
-      <div class="col s4 "><br><br><br>
+      <div class="col s5 "><br><br><br>
         <div class="card-panel sign-card">
         <h4>SignIn </h4></br>
         <div class="row">
@@ -25,10 +24,10 @@
         </div>
         <div class="row">
           <div class="input-field col s8">
-            <button id="submit-signup" class="btn right">SignUp</button>
+            <button id="submit-signup" class="btn right blue-grey darken-3">SignUp</button>
           </div>
           <div class="input-field col s4">
-            <button id="submit-signin" class="btn right">SignIn</button>
+            <button id="submit-signin" class="btn right blue-grey darken-3">SignIn</button>
           </div>
         </div>
         <div class="msg"></div>
@@ -36,11 +35,8 @@
       </div>
       
       <div class="col s3"></div>
-     
-
     </div>
   </div>
     <script src="js/signin.js"></script>
-
     </body>
 </html>
