--- a/PriChain/views/signup.html
+++ b/PriChain/views/signup.html
@@ -4,12 +4,11 @@
         <% include ./partials/head %>
     </head>
 <body>
-
   <div class="container-fluid">
     <div class="row  ">
       <div class="col s4"></div>
       <div class="col s5 "><br><br><br>
-        <div class="card-panel sign-card center-align">
+        <div class="card-panel sign-card ">
         <h4>SignIn </h4></br>
         <div class="row">
             <div class="input-field col s6">
@@ -35,20 +34,18 @@
             <label class="active" for="user-mobile">Mobile</label>
           </div>
         </div>
-        <div class="row">
+        <div class="row ">
           <div class="input-field col s12">
             <input id="user-password" type="password" class="validate">
             <label class="active" for="user-password">Password</label>
           </div>
-        </div>
-        
-                
+        </div>                
         <div class="row">
           <div class="input-field col s8">
-            <button id="submit-signin" class="btn right">SignIn</button>
+            <button id="submit-signin" class="btn right blue-grey darken-3">SignIn</button>
           </div>
           <div class="input-field col s24">
-            <button id="submit-signup" class="btn right">SignUp</button>
+            <button id="submit-signup" class="btn right blue-grey darken-3">SignUp</button>
           </div>
         </div>
         <div class="msg"></div>
