publisher info in display

--- a/PriChain/views/dashboard_user.html
+++ b/PriChain/views/dashboard_user.html
@@ -22,7 +22,7 @@
   </ul>
   <div class="container1">
      <!-- ===============Loader==================== -->
-    <div class="row center-align" style="z-index: 10; position: fixed; left: 60%; top: 40%; background-color: black;">
+    <div class="row center-align" style="z-index: 10; position: fixed; left: 60%; top: 40%;">
       <div class="preloader-wrapper big active loader ">
         <div class="spinner-layer spinner-blue-only">
           <div class="circle-clipper left">
