--- a/PriChain/views/dashboard_author.html
+++ b/PriChain/views/dashboard_author.html
@@ -18,6 +18,7 @@
 			<li><div class="divider"></div></li>
 			<li><a id="requests-for-me" class=""><i class="material-icons">exit_to_app</i>Distributer`s Requests&nbsp;&nbsp;   <span class="request-numbers circle gray"></span></a></li>
 			<li><a id="requests-for-me-approved" class=""><i class="material-icons">exit_to_app</i>Approved Requests</a></li>
+			<li><a id="requests-for-me-rejected" class=""><i class="material-icons">exit_to_app</i>Rejected Requests</a></li>
 			<li><div class="divider"></div></li>
 			<li><a class="" id="profile-tab"><i class="material-icons">account_circle</i>Profile</a></li>
 			<li><a class="" href="/logout"><i class="material-icons">close</i>Logout</a></li>
