--- a/PriChain/views/dashboard_publisher.html
+++ b/PriChain/views/dashboard_publisher.html
@@ -20,6 +20,7 @@
 			<li><div class="divider"></div></li>
 			<li><a class="" id="requests-by-me"><i class="material-icons">exit_to_app</i>My Requests &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   <span class="request-numbers circle gray"></span></a></li>
 			<li><a id="requests-by-me-approved" class=""><i class="material-icons">exit_to_app</i>Approved Requests</a></li>
+			<li><a id="requests-for-me-rejected" class=""><i class="material-icons">exit_to_app</i>Rejected Requests</a></li>
 			<li><div class="divider"></div></li>
 			<li><a class="" id="profile-tab"><i class="material-icons">account_circle</i>Profile</a></li>
 			<li><a class="" href="/logout"><i class="material-icons">close</i>Logout</a></li>
